// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GiftGrid /> testing 1. Should to render correctly 1`] = `
<Fragment>
  <h4>
    Matrix
  </h4>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<GiftGrid /> testing 2. Should to show items when img loading: useFetchGifts 1`] = `
<Fragment>
  <h4>
    Matrix
  </h4>
  <div
    className="card-grid"
  >
    <GiftGridItem
      id="ABC"
      key="ABC"
      title="Title here"
      url="https://www.google.com"
      urlImg="https://www.google.com"
    />
    <GiftGridItem
      id="DEF"
      key="DEF"
      title="Title here"
      url="https://www.google.com"
      urlImg="https://www.google.com"
    />
  </div>
</Fragment>
`;
